fixes overflow

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ p {
 }
 
 .line img {
-  left: 450px;
+  left: 410px;
   width: 500px;
   position: relative;
 }
@@ -113,7 +113,7 @@ p {
 
 .content_item .author {
   position: relative;
-  left: 650px;
+  left: 630px;
 }
 
 .content_item img {
